--- a/public/assets/css/AdminLTE.css
+++ b/public/assets/css/AdminLTE.css
@@ -4264,6 +4264,7 @@ table.text-center th {
   background-color: #3c8dbc;
   border-color: #367fa9;
   padding: 1px 10px;
+  color: #fff;
 }
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
   margin-right: 5px;
